Replace 2 histograms with Variations.SeedFetchResponseOrErrorCode.

Combines Variations.SeedFetchResponseCode and
Variations.FailedRequestErrorCode histograms.

It's useful to have error codes and http response codes in one.

BUG=652406

Review-Url: https://codereview.chromium.org/2384173003
Cr-Commit-Position: refs/heads/master@{#422580}

Former-commit-id: 6e0a63921b29d06a00295a7147d828ad4ee9624a